# mlib

./: CMakeLists.txt  README.md
.cache/clangd/index/: axpy.cpp.613D34F07806D58B.idx  axpy.cpp.C7113DA28C59DAAC.idx  basic_vector_op.cpp.1187C8B1623347D0.idx  copy.cpp.26F09FD4B220F32C.idx  copy.cpp.A882016834B08CB9.idx  dot.cpp.14A8E1AF414DC561.idx  dot.cpp.9741BDDD7FE0163F.idx  elementwise.cpp.9800F2F805D0B693.idx  elementwise.cpp.B3FE751A3C56DECD.idx  scal.cpp.59B085A3E2662DF5.idx  scal.cpp.7522F4B6A54667FE.idx  swap.cpp.C66D8594A6FCB1E5.idx  swap.cpp.F93F047A598C8403.idx  vector.hpp.1F03628DF13E08CB.idx  vector_elementwise.cpp.B30738CC625E6EC2.idx
benchmarks/include/mlib/bench/: bench.hpp
benchmarks/include/mlib/bench/arch/: detect.hpp
benchmarks/include/mlib/bench/arch/arm/: timer.hpp
benchmarks/include/mlib/bench/arch/x86_64/: cache_ops.hpp  timer.hpp
examples/: CMakeLists.txt  basic_vector_op.cpp  vector_elementwise.cpp
include/: vector.hpp
include/mlib/: kernels.hpp  matrix.hpp
include/mlib/kernels/matrix/: add.hpp  copy.hpp  scal.hpp  sub.hpp
include/mlib/kernels/vectors/: dot.hpp  norms.hpp  norms_inf.hpp  swap.hpp
kernels/backends/avx2/vectors/: axpy.cpp  copy.cpp  dot.cpp  elementwise.cpp  elementwise.hpp  norms.cpp  norms_inf.cpp  scal.cpp  swap.cpp
kernels/backends/neon/vectors/: axpy.cpp  copy.cpp  dot.cpp  elementwise.cpp  norms.cpp  norms_inf.cpp  scal.cpp  swap.cpp
kernels/backends/scalar/matrix/: add.cpp
kernels/backends/scalar/vectors/: axpy.cpp  copy.cpp  dot.cpp  elementwise.cpp  norms.cpp  norms_inf.cpp  scal.cpp  swap.cpp
kernels/vectors/: axpy.hpp  copy.hpp  elementwise.hpp  scal.hpp  swap.hpp
scripts/: build_all.sh
tests/: CMakeLists.txt
